--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,12 +9,12 @@ find_package(OpenGL REQUIRED)
 add_executable(main 
 src/config.h 
 src/main.cpp
-src/glad.c
+dependencies/glad/glad.c
 src/shaderClass.cpp
 src/VBOClass.cpp
 src/EBOClass.cpp
 src/VAOClass.cpp
-src/stb.cpp
+dependencies/stb/stb.cpp
 src/TextureUtil.cpp
 src/Window.cpp
 src/game_objects.cpp
@@ -38,12 +38,12 @@ target_link_libraries(main glfw3 OpenGL::GL)
 add_executable(stage_editor 
 src/config.h 
 src/stage_editor.cpp
-src/glad.c
+dependencies/glad/glad.c
 src/shaderClass.cpp
 src/VBOClass.cpp
 src/EBOClass.cpp
 src/VAOClass.cpp
-src/stb.cpp
+dependencies/stb/stb.cpp
 src/TextureUtil.cpp
 src/Window.cpp
 src/game_objects.cpp
